[package]
name = "round2rs"
version = "0.1.1"
authors = ["Christian Louis Abrigo (yexiuph)"]
homepage = "https://github.com/yexiuph/round-to"
documentation = "https://github.com/yexiuph/round-to"
repository = "https://github.com/yexiuph/round-to"
description = "Based on round-to NPM Crate"
keywords = ["round-to", "round"]
license = "MIT"
edition = "2021"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
